fix overflow-x to change to dots

--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -61,7 +61,7 @@ button:hover {
 
 .amenities h4 {
     white-space: nowrap;
-    overflow-x: hidden;
+    overflow-x: ellipsis;
 }
 
 .popover {
